--- a/index.html
+++ b/index.html
@@ -123,13 +123,12 @@
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Eu quero trabalhar como Dev Mobile Junior. Isso significa que escrevo e mantenho o
-												código de aplicativos móveis e – o mais importante – implemento novos recursos, corrijo
-												bugs e trabalho em equipe. Para ser claro, aprendo continuamente, verifico outros códigos
-												e sigo as mudanças nas tecnologias mais recentes. Em outras palavras, sou apaixonado por
-												encontrar soluções inovadoras para melhorar a experiência do usuário. Desejo obter a
-												experiência prática e o desejo de trabalhar da minha parte em projetos reais e fiquei
-												com a opinião de que eu faço um Desenvolvedor Mobile Junior.</p>
+											<p>Profissional iniciante na área de desenvolvimento de aplicativos móveis, responsável por criar e manter
+												aplicativos para plataformas como Android e iOS. Eles implementam funcionalidades seguindo especificações,
+												integram APIs, otimizam o desempenho do aplicativo e realizam testes para identificar e corrigir bugs.
+												Além disso, colaboram com equipes multidisciplinares, incluindo designers e desenvolvedores sêniores,
+												para entregar soluções eficazes e user-friendly. Embora estejam no começo de suas carreiras, seu trabalho
+												é essencial para o funcionamento e evolução dos aplicativos móveis.</p>
 											</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
@@ -165,11 +164,14 @@
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Já a função de Desenvolvedor Mobile Sênior me permite liderar projetos completos para aplicativos
-												móveis, incluindo escolhas de design e arquitetura. Devo programar, revisar código de colegas e
-												instruir desenvolvedores juniores. Meu trabalho é resolver problemas difíceis e garantir a qualidade
-												do produto, bem como ficar de olho nas tendências do setor, em busca de inovações que melhorem a
-												experiência do usuário e otimizem o desenvolvimento.</p>
+											<p>Profissional experiente e altamente qualificado na criação e manutenção de aplicativos móveis
+												para plataformas como Android e iOS. Eles lideram projetos complexos, implementam soluções
+												avançadas, otimizam o desempenho e garantem a qualidade do código. Além de escrever código,
+												eles revisam o trabalho de desenvolvedores juniores, oferecem orientação técnica e colaboram
+												estreitamente com equipes de design, produto e back-end para garantir a entrega de produtos
+												eficientes e user-friendly. Com profundo conhecimento em diversas tecnologias e frameworks,
+												um desenvolvedor sênior também está sempre atualizado com as últimas tendências e melhores
+												práticas do desenvolvimento mobile.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
@@ -212,79 +214,38 @@
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>No papel de Tech Lead/Arquiteto, eu lidero a arquitetura de sistemas e
-												aplicativos independente, escalável, seguro e de alta performance, tomo
-												decisões técnicas críticas para o desenvolvimento do produto, desenvolvo
-												padrões de codificação e a equipe. Minhas responsabilidades estendem-se
-												às mais recentes tecnologias, procurando inovações e otimizando o processo.
-												Com o tempo, minha experiência de trabalho permitiu-me resolver desafios
-												técnicos de forma eficaz, que desempenhou um papel significativo no sucesso
-												dos projetos e da empresa.</p>
+											<p>Profissional de elite, responsável por definir a arquitetura de aplicativos móveis e liderar
+												a equipe de desenvolvimento. Ele tem a visão estratégica do projeto, escolhendo as
+												tecnologias adequadas, estabelecendo padrões de qualidade e garantindo a escalabilidade e
+												eficiência do aplicativo. Além de possuir habilidades técnicas excepcionais, ele também
+												orienta e apoia a equipe, resolve problemas complexos e toma decisões críticas que impactam
+												o produto final. Sua experiência e liderança são fundamentais para entregar soluções
+												inovadoras e robustas.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
 											<ul>
-												<li>Pensamento Estratégico: Ter uma visão de longo prazo para a arquitetura e o planejamento de sistemas.</li>
-												<li>Colaboração Interdisciplinar: Trabalhar efetivamente com equipes de diferentes áreas e departamentos.</li>
-												<li> Negociação: Habilidade para negociar prioridades e soluções com stakeholders diversos.</li>
+												<li>Mentalidade de aprendizado contínuo: Mantém-se atualizado com as últimas tendências e tecnologias do desenvolvimento mobile.</li>
+												<li>Gestão de tempo: Garante que os prazos sejam cumpridos sem comprometer a qualidade.</li>
+												<li>Solução de problemas: Encontra soluções práticas e inovadoras para problemas técnicos.</li>
+												<li>Pensamento crítico: Identifica e resolve desafios complexos de maneira eficaz.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Django</span></li>
+														class="badge bg-secondary badge-pill">Pyton</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">JavaScript</span></li>
+														class="badge bg-secondary badge-pill">Java</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Node.js</span></li>
+														class="badge bg-secondary badge-pill">Swift</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Require.js</span></li>
+														class="badge bg-secondary badge-pill">APIs RESTful</span></li>
 												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/SASS</span></li>
+														class="badge bg-secondary badge-pill"></span></li>
 											</ul>
 										</div>
 
-									</article>
-
-									<article class="resume-timeline-item position-relative">
-
-										<div class="resume-timeline-item-header mb-2">
-											<div class="d-flex flex-column flex-md-row">
-												<h3 class="resume-position-title font-weight-bold mb-1">
-													Arquiteto de Software
-												</h3>
-											</div>
-										</div>
-										<div class="resume-timeline-item-desc">
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-												elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-												quam felis, ultricies nec. Fusce vulputate eleifend sapien. Vestibulum
-												purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam
-												accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla.
-												Vestibulum.</p>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
-												Soft Skills exigidas para essa carreira:
-											</h4>
-											<ul>
-												<li>Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.</li>
-												<li>At vero eos et accusamus et iusto odio dignissimos.</li>
-												<li>Blanditiis praesentium voluptatum deleniti atque corrupti.</li>
-												<li>Maecenas tempus tellus eget.</li>
-											</ul>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
-												Roadmap de Aprendizado:</h4>
-											<ul class="list-inline">
-												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">Ruby on Rails</span></li>
-												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">jQuery</span></li>
-												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">HTML/LESS</span></li>
-												<li class="list-inline-item"><span
-														class="badge bg-secondary badge-pill">MongoDB</span></li>
-											</ul>
-										</div>
 									</article>
 								</div>
 							</div>
